--- a/home.css
+++ b/home.css
@@ -92,7 +92,7 @@ h1{ /* Members Text Font Settings */
 
 /* Customizable falling stars */
 .snowflake {
-    color: orange;
+    color: green;
     font-size: 1em;
     font-family: Arial, sans-serif;
     text-shadow: 0 0 5px #000;
@@ -218,6 +218,9 @@ h1{ /* Members Text Font Settings */
 
 
 
+  pre{
+    color:orange
+  }
 
 
   #enter{
