--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ h1{ /* Members Text Font Settings */
 
 /* Customizable falling stars */
 .snowflake {
-    color: green;
+    color: red;
     font-size: 1em;
     font-family: Arial, sans-serif;
     text-shadow: 0 0 5px #000;
